<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application -->
	<string name="application_label" translatable="false">BabyAssist</string>

	<!-- Monitoring Service -->
	<string name="monitoringService_notification_channelId" translatable="false">MonitoringChannelID</string>
	<string name="monitoringService_notification_channelName">Monitoring Service</string>
	<string name="monitoringService_notification_contentTitle">BabyAssist\'s Monitoring</string>
	<string name="monitoringService_notification_contentText">%1$s dB</string>

	<!-- Pending to review -->
	<string name="tglMonitoringOn">Deactivate Monitoring</string>
	<string name="tglMonitoringOff">Activate Monitoring</string>
	<string name="lblDecibelMessage">%1$s dB</string>
	<string name="temporaryMessageForDemonstrationPurposes">Positive reading</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="menu_home">Home</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_recipients">Recipients</string>
	<string name="cancel">Cancel</string>
	<string name="confirm">Confirm</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="hours">Hours</string>
	<string name="minutes">Minutes</string>
	<string name="seconds">Seconds</string>
	<string name="delete_confirmation_title">Delete</string>
	<string name="delete_confirmation_message">Are you sure you want to delete this information?</string>
	<string name="preference_dialog_notificationRecipients_title">Add phone number</string>
	<string name="preference_dialog_notificationRecipients_hint">Phone number</string>

	<!-- Preferences -->
	<string name="preferenceCategory_title_monitoring">Monitoring</string>
	<string name="preferenceCategory_title_notifications">Notifications</string>

	<string name="preference_defaultValue_lowBatteryLevelNotificationMessage">ALERT! Low battery level in your device that is executing BabyAssist\'s monitoring task.</string>
	<string name="preference_defaultValue_notificationMessage">ALERT! The BabyAssist app detected an incident during monitoring.</string>

	<string name="preference_key_timeLimitForMonitoring" translatable="false">timeLimitForMonitoring</string>
	<string name="preference_key_decibelsForPositiveReading" translatable="false">decibelsForPositiveReading</string>
	<string name="preference_key_timeForPositiveReading" translatable="false">timeForPositiveReading</string>
	<string name="preference_key_notifyPositiveReadingFromMonitoring" translatable="false">notifyPositiveReadingFromMonitoring</string>
	<string name="preference_key_notifyLowBatteryLevel" translatable="false">notifyLowBatteryLevel</string>
	<string name="preference_key_notificationTypes" translatable="false">notificationTypes</string>
	<string name="preference_key_notificationMessage" translatable="false">notificationMessage</string>
	<string name="preference_key_notificationRecipients" translatable="false">notificationRecipients</string>
	<string name="preference_key_notificationPhoneNumbers" translatable="false">notificationPhoneNumbers</string>

	<string name="preference_summary_timeLimitForMonitoring">The timeout over which monitoring should occur. Upon reaching the time mark set here, monitoring is automatically turned off</string>
	<string name="preference_summary_decibelsForPositiveReading">The volume in decibels that the microphone needs to capture to consider as a positive reading during monitoring</string>
	<string name="preference_summary_timeForPositiveReading">The length of time required for the positive reading to occur to notify recipients</string>
	<string name="preference_summary_notificationRecipients">Manage phone numbers</string>

	<string name="preference_title_timeLimitForMonitoring">Time limit for monitoring</string>
	<string name="preference_title_decibelsForPositiveReading">Decibels for positive reading</string>
	<string name="preference_title_timeForPositiveReading">Time for positive reading</string>
	<string name="preference_title_notifyPositiveReadingFromMonitoring">Positive monitoring reading</string>
	<string name="preference_title_notifyLowBatteryLevel">Low battery level</string>
	<string name="preference_title_notificationTypes">Notification format</string>
	<string name="preference_title_notificationMessage">Notification message</string>
	<string name="preference_title_notificationRecipients">Notification recipients</string>
</resources>